# uttt

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  play.py  pyproject.toml  test_setup.py  train.py  train_distributed.py  train_optimized.py
alphazero/: __init__.py  distributed_trainer.py  mcts.py  network.py  optimized_mcts.py  optimized_trainer.py  trainer.py
src/: lib.rs
