[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uttt-alphazero"
version = "0.1.0"
description = "AlphaZero for Ultimate Tic Tac Toe"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
